2007-06-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-ems.el (gnus-x-splash): Fix calculation; error in tty.

2007-06-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-ems.el (gnus-x-splash): Make it work.

	* gnus-start.el (gnus-1): Relax restrictions that prevent gnus-x-splash
	from being used.

	* lpath.el: Bind line-spacing and tool-bar-mode for XEmacs.

2007-06-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-xmas.el (gnus-xmas-define): Make gnus-make-overlay ignore the
	4th and the 5th arguments.

	* gnus-art.el (gnus-insert-mime-button): Make a button overlay without
	the front stickiness.
	(gnus-article-summary-command-nosave): Correct the order of the
	arguments passed to pop-to-buffer.
	(gnus-article-read-summary-keys): Ditto; make it work properly when the
	summary command ends up with the article buffer.

	* mm-decode.el (mm-insert-part): Separate the extracted parts that have
	the same faces.

2007-06-07  Juanma Barranquero  <lekktu@gmail.com>

	* gnus-art.el (gnus-split-methods): Fix typo in docstring.

2007-06-06  Juanma Barranquero  <lekktu@gmail.com>

	* gnus-diary.el (gnus-diary-time-format, gnus-summary-sort-by-schedule):
	* gnus-sum.el (gnus-summary-highlight):
	* pgg.el (pgg-sign-region, pgg-sign):
	* mail-source.el (mail-source-delete-old-incoming-confirm):
	* nndiary.el (nndiary-reminders): Fix typos in docstrings.

2007-06-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-view-part-externally)
	(gnus-mime-view-part-internally): Fix predicate function passed to
	completing-read.

	* mm-decode.el (mm-image-fit-p): Return t if argument is not an image.

	* gnus.el (gnus-update-message-archive-method): Add :version.

2007-06-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el (gnus-update-message-archive-method): New variable.

	* gnus-start.el (gnus-setup-news): Update saved "archive" method
	according to gnus-message-archive-method if
	gnus-update-message-archive-method is non-nil.

2007-05-29  Katsumi Yamaoka  <yamaoka@jpl.org>
